editor/checkclanmain.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { utterance: peg$parseutterance },
      peg$startRuleFunction  = peg$parseutterance,

      peg$c0 = function(pr, mi, s, ep, po) { return (testprint(pr) + testprint(mi) + s.join('') + ep + testprint(po)).trim(); },
      peg$c1 = function(pr, mi, s, po) { return 'warning: missing end marker.'; },
      peg$c2 = function(pr, mi, ep, po) { return 'warning: missing utternance (use 0 instead of nothing).'; },
      peg$c3 = function(s) { return s; },
      peg$c4 = function(p) { return p; },
      peg$c5 = function(c) { return c; },
      peg$c6 = function(l) { return l; },
      peg$c7 = function(w) { return w; },
      peg$c8 = "+<",
      peg$c9 = peg$literalExpectation("+<", false),
      peg$c10 = function(m) { return "<mark>" + m + "</mark>"; },
      peg$c11 = "+,",
      peg$c12 = peg$literalExpectation("+,", false),
      peg$c13 = "+^",
      peg$c14 = peg$literalExpectation("+^", false),
      peg$c15 = "++",
      peg$c16 = peg$literalExpectation("++", false),
      peg$c17 = "+\"",
      peg$c18 = peg$literalExpectation("+\"", false),
      peg$c19 = "[",
      peg$c20 = peg$literalExpectation("[", false),
      peg$c21 = "]",
      peg$c22 = peg$literalExpectation("]", false),
      peg$c23 = function(s1, s2) { return "<bracket>" + "<type>" + s1.join("") + "</type>" + s2.join("") + "</bracket>"; },
      peg$c24 = "<",
      peg$c25 = peg$literalExpectation("<", false),
      peg$c26 = ">",
      peg$c27 = peg$literalExpectation(">", false),
      peg$c28 = function(s) { return "<chevron>" + s.join("") + "</chevron>"; },
      peg$c29 = "&{l=*",
      peg$c30 = peg$literalExpectation("&{l=*", false),
      peg$c31 = "&}l=*",
      peg$c32 = peg$literalExpectation("&}l=*", false),
      peg$c33 = function(tt) { return "<longevent type='verbal'>" + ts + "</longevent>" },
      peg$c34 = "&{n=*",
      peg$c35 = peg$literalExpectation("&{n=*", false),
      peg$c36 = "&}n=*",
      peg$c37 = peg$literalExpectation("&}n=*", false),
      peg$c38 = function(tt) { return "<longevent type='nonverbal'>" + ts + "</longevent>" },
      peg$c39 = function(w) { return "<w>" + w + "</w>"; },
      peg$c40 = "[-",
      peg$c41 = peg$literalExpectation("[-", false),
      peg$c42 = function(m) { return "<precode>" + m + "</precode>"; },
      peg$c43 = "[+",
      peg$c44 = peg$literalExpectation("[+", false),
      peg$c45 = function(m) { return "<postcode>" + m + "</postcode>"; },
      peg$c46 = "#",
      peg$c47 = peg$literalExpectation("#", false),
      peg$c48 = /^[0-9]/,
      peg$c49 = peg$classExpectation([["0", "9"]], false, false),
      peg$c50 = ".",
      peg$c51 = peg$literalExpectation(".", false),
      peg$c52 = function(p1, p2) { return "<pause>" + p1.join('') + "." + p2.join('') + "</pause>"; },
      peg$c53 = function(p2) { return "<pause>" + "." + p2.join('') + "</pause>"; },
      peg$c54 = function(p1) { return "<pause>" + p1.join('') + "</pause>"; },
      peg$c55 = "###",
      peg$c56 = peg$literalExpectation("###", false),
      peg$c57 = function() { return "<pause>" + "long" + "</pause>"; },
      peg$c58 = "##",
      peg$c59 = peg$literalExpectation("##", false),
      peg$c60 = function() { return "<pause>" + "middle" + "</pause>"; },
      peg$c61 = function() { return "<pause>" + "short" + "</pause>"; },
      peg$c62 = "(",
      peg$c63 = peg$literalExpectation("(", false),
      peg$c64 = ")",
      peg$c65 = peg$literalExpectation(")", false),
      peg$c66 = "(...)",
      peg$c67 = peg$literalExpectation("(...)", false),
      peg$c68 = "(..)",
      peg$c69 = peg$literalExpectation("(..)", false),
      peg$c70 = "(.)",
      peg$c71 = peg$literalExpectation("(.)", false),
      peg$c72 = function(ic, initial, milieu, fin) { return ic + initial + reste.join('') + fin; },
      peg$c73 = function(initial, milieu, fin) { return initial + reste.join('') + fin; },
      peg$c74 = " ",
      peg$c75 = peg$literalExpectation(" ", false),
      peg$c76 = /^[']/,
      peg$c77 = peg$classExpectation(["'"], false, false),
      peg$c78 = function(initial, mot, w, apos) { return initial + mot.join('') + "'"; },
      peg$c79 = function(mot) { return mot.join(''); },
      peg$c80 = /^[&=\-*]/,
      peg$c81 = peg$classExpectation(["&", "=", "-", "*"], false, false),
      peg$c82 = function(initial, apos) { return initial + apos; },
      peg$c83 = function(initial, reste, apos) { return initial + reste.join('') + apos; },
      peg$c84 = function(initial, reste) { return initial + reste.join(''); },
      peg$c85 = /^[\-+0-9]/,
      peg$c86 = peg$classExpectation(["-", "+", ["0", "9"]], false, false),
      peg$c87 = /^[0-9\-+()*]/,
      peg$c88 = peg$classExpectation([["0", "9"], "-", "+", "(", ")", "*"], false, false),
      peg$c89 = function(digits) { return digits.join(''); },
      peg$c90 = "+",
      peg$c91 = peg$literalExpectation("+", false),
      peg$c92 = /^[.?!\/;:,]/,
      peg$c93 = peg$classExpectation([".", "?", "!", "/", ";", ":", ","], false, false),
      peg$c94 = function(p) { return "<ut>" + p.join('') + "</ut>"; },
      peg$c95 = /^[.!?,;:]/,
      peg$c96 = peg$classExpectation([".", "!", "?", ",", ";", ":"], false, false),
      peg$c97 = function(pct) { return "<ut>" + pct.join('') + "</ut>"; },
      peg$c98 = /^[,\u2021\u201E;:,\u2193\u2191]/,
      peg$c99 = peg$classExpectation([",", "\u2021", "\u201E", ";", ":", ",", "\u2193", "\u2191"], false, false),
      peg$c100 = function(pct) { return "<ponctu>" + pct.join('') + "</ponctu>"; },
      peg$c101 = /^[ \t\r\n]/,
      peg$c102 = peg$classExpectation([" ", "\t", "\r", "\n"], false, false),
      peg$c103 = function() { return " "; },
      peg$c104 = /^[#$&\xB0\xA7=*]/,
      peg$c105 = peg$classExpectation(["#", "$", "&", "\xB0", "\xA7", "=", "*"], false, false),
      peg$c106 = function(oth) { return '_'+oth+'_'; },
      peg$c107 = /^[a-z\xE0\xE2\xE4\xE9\xE8\xEA\xEB\xE7\xEF\xEE\xF4\xF6\xF9\xFC\xFB_(){}\/\\@\u02CC\u02C8:\^]/,
      peg$c108 = peg$classExpectation([["a", "z"], "\xE0", "\xE2", "\xE4", "\xE9", "\xE8", "\xEA", "\xEB", "\xE7", "\xEF", "\xEE", "\xF4", "\xF6", "\xF9", "\xFC", "\xFB", "_", "(", ")", "{", "}", "/", "\\", "@", "\u02CC", "\u02C8", ":", "^"], false, false),
      peg$c109 = /^[A-Z\xC0\xC2\xC4\xC9\xC8\xCB\xCA\xC7\xCF\xCE\xD6\xD4\xDA\xDC\xDB_(){}\/\\@\u02CC\u02C8\^]/,
      peg$c110 = peg$classExpectation([["A", "Z"], "\xC0", "\xC2", "\xC4", "\xC9", "\xC8", "\xCB", "\xCA", "\xC7", "\xCF", "\xCE", "\xD6", "\xD4", "\xDA", "\xDC", "\xDB", "_", "(", ")", "{", "}", "/", "\\", "@", "\u02CC", "\u02C8", "^"], false, false),
      peg$c111 = /^[iy\u0268\u0289\u026Fu\u026A\u028F\u028Ae\xF8\u0259\u0258\u0275\u0264o\u025B\u0153\u025C\u025E\u028C\u0254\xE6\u0250a\u0276\u0251\u0252\u025A\u025D]/,
      peg$c112 = peg$classExpectation(["i", "y", "\u0268", "\u0289", "\u026F", "u", "\u026A", "\u028F", "\u028A", "e", "\xF8", "\u0259", "\u0258", "\u0275", "\u0264", "o", "\u025B", "\u0153", "\u025C", "\u025E", "\u028C", "\u0254", "\xE6", "\u0250", "a", "\u0276", "\u0251", "\u0252", "\u025A", "\u025D"], false, false),
      peg$c113 = /^[\u1EBD\xF8\u0303\u025B\u0303\xF5\u0254\u0303\xE3\u0251\u0303]/,
      peg$c114 = peg$classExpectation(["\u1EBD", "\xF8", "\u0303", "\u025B", "\u0303", "\xF5", "\u0254", "\u0303", "\xE3", "\u0251", "\u0303"], false, false),
      peg$c115 = /^[pbdt\u0288\u0256c\u025Fk\u0261q\u0262\u0294m\u0271\u0273\u0272\u014B\u0274\u0299r\u027D\u0280\u2C71\u027E\u0278\u03B2fv\u03B8\xF0sz\u0283\u0292\u0282\u0290\xE7\u029Dx\u0263\u03C7\u0281\u0127\u0295h\u026C\u026E\u028B\u0279\u027Bj\u0270l\u026D\u028E\u029F]/,
      peg$c116 = peg$classExpectation(["p", "b", "d", "t", "\u0288", "\u0256", "c", "\u025F", "k", "\u0261", "q", "\u0262", "\u0294", "m", "\u0271", "\u0273", "\u0272", "\u014B", "\u0274", "\u0299", "r", "\u027D", "\u0280", "\u2C71", "\u027E", "\u0278", "\u03B2", "f", "v", "\u03B8", "\xF0", "s", "z", "\u0283", "\u0292", "\u0282", "\u0290", "\xE7", "\u029D", "x", "\u0263", "\u03C7", "\u0281", "\u0127", "\u0295", "h", "\u026C", "\u026E", "\u028B", "\u0279", "\u027B", "j", "\u0270", "l", "\u026D", "\u028E", "\u029F"], false, false),
      peg$c117 = /^[\-+]/,
      peg$c118 = peg$classExpectation(["-", "+"], false, false),
      peg$c119 = /^[\-+']/,
      peg$c120 = peg$classExpectation(["-", "+", "'"], false, false),
      peg$c121 = /^[<>]/,
      peg$c122 = peg$classExpectation(["<", ">"], false, false),
      peg$c123 = /^[0-9#$&\xB0\xA7=*(){}\/\\@.!?:;'," \t\r\n]/,
      peg$c124 = peg$classExpectation([["0", "9"], "#", "$", "&", "\xB0", "\xA7", "=", "*", "(", ")", "{", "}", "/", "\\", "@", ".", "!", "?", ":", ";", "'", ",", "\"", " ", "\t", "\r", "\n"], false, false),
      peg$c125 = /^[0-9#$&\xB0\xA7=*(){}\/\\@.!?:;',"]/,
      peg$c126 = peg$classExpectation([["0", "9"], "#", "$", "&", "\xB0", "\xA7", "=", "*", "(", ")", "{", "}", "/", "\\", "@", ".", "!", "?", ":", ";", "'", ",", "\""], false, false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseutterance() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    s1 = peg$parseprecode();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseblank();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseblank();
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parsemarkinit();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = peg$parseblank();
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parseblank();
          }
          if (s4 !== peg$FAILED) {
            s5 = [];
            s6 = peg$parseeltb();
            if (s6 !== peg$FAILED) {
              while (s6 !== peg$FAILED) {
                s5.push(s6);
                s6 = peg$parseeltb();
              }
            } else {
              s5 = peg$FAILED;
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parseendmarker();
              if (s6 !== peg$FAILED) {
                s7 = [];
                s8 = peg$parseblank();
                while (s8 !== peg$FAILED) {
                  s7.push(s8);
                  s8 = peg$parseblank();
                }
                if (s7 !== peg$FAILED) {
                  s8 = peg$parsepostcode();
                  if (s8 === peg$FAILED) {
                    s8 = null;
                  }
                  if (s8 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c0(s1, s3, s5, s6, s8);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseprecode();
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parseblank();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parseblank();
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parsemarkinit();
          if (s3 === peg$FAILED) {
            s3 = null;
          }
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parseblank();
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$parseblank();
            }
            if (s4 !== peg$FAILED) {
              s5 = [];
              s6 = peg$parseeltb();
              if (s6 !== peg$FAILED) {
                while (s6 !== peg$FAILED) {
                  s5.push(s6);
                  s6 = peg$parseeltb();
                }
              } else {
                s5 = peg$FAILED;
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parsepostcode();
                if (s6 === peg$FAILED) {
                  s6 = null;
                }
                if (s6 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c1(s1, s3, s5, s6);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseprecode();
        if (s1 === peg$FAILED) {
          s1 = null;
        }
        if (s1 !== peg$FAILED) {
          s2 = [];
          s3 = peg$parseblank();
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$parseblank();
          }
          if (s2 !== peg$FAILED) {
            s3 = peg$parsemarkinit();
            if (s3 === peg$FAILED) {
              s3 = null;
            }
            if (s3 !== peg$FAILED) {
              s4 = [];
              s5 = peg$parseblank();
              while (s5 !== peg$FAILED) {
                s4.push(s5);
                s5 = peg$parseblank();
              }
              if (s4 !== peg$FAILED) {
                s5 = peg$parseendmarker();
                if (s5 === peg$FAILED) {
                  s5 = null;
                }
                if (s5 !== peg$FAILED) {
                  s6 = peg$parsepostcode();
                  if (s6 === peg$FAILED) {
                    s6 = null;
                  }
                  if (s6 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c2(s1, s3, s5, s6);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      }
    }

    return s0;
  }

  function peg$parseeltb() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseelt();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseblank();
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parseblank();
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c3(s1);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseelt();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c3(s1);
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parseelt() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parsepause();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c4(s1);
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parsecrochet();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c5(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parsechevron();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c5(s1);
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parselongevent();
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c6(s1);
          }
          s0 = s1;
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parseponctu();
            if (s1 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c4(s1);
            }
            s0 = s1;
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = peg$parseword();
              if (s1 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c7(s1);
              }
              s0 = s1;
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parsemarkinit() {
    var s0, s1;
